@@ -1,5 +1,12 @@
 2009-10-06  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* operation/agentes/stat_win.php: fix the jquery lost in the last query, fix
+	the auto-refresh graph, fix z-index level for calendar and fix the set begin
+	data for graph.
+	Fixes: 2857280
+
+2009-10-06  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* godmode/agentes/agent_manager.php: change the textbox interval for
 	"print_extended_select_for_time" widget.
 	* include/styles/pandora_minimal.css, operation/agentes/stat_win.php: change
